--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -11,7 +11,7 @@
         <span class="page page{{page}}" *ngFor="let page of totalPagesToShow; index as i" [ngClass]="{'selected': currentPage === page, 'lastpage': page === totalPages}">
             <a (click)=getPage(page)>{{page}}</a>          
         </span>
-        <span class="next" [ngClass]="{'disable': currentPage === totalPages}" (click)=getNextPage()>></span>
+        <span class="next" [ngClass]="{'disable': currentPage === totalPages || totalPages <= 2}" (click)=getNextPage()>></span>
     </div>
 
     <div id="container">
